refactor(database): migrate from Prisma to Supabase direct integration
- Remove users table and reference auth.users directly
- Replace Prisma commands with custom database utility scripts
- Add Supabase database type definitions for type safety
- Update video and conversation models to use Supabase client
- Create migration to drop users table and update foreign key references
- Implement Row Level Security policies for multi-tenant data isolation
- Update Edge Functions to use Supabase client instead of Prisma

This change simplifies the database layer by removing the intermediate
users table and leveraging Supabase Auth directly, reducing complexity
and improving performance.

--- a/package.json
+++ b/package.json
@@ -16,11 +16,12 @@
     "test:run": "vitest run",
     "test:watch": "vitest --watch",
     "test:coverage": "vitest run --coverage",
-    "postinstall": "prisma generate",
-    "db:studio": "prisma studio",
-    "db:push": "prisma db push",
-    "db:migrate": "prisma migrate dev",
-    "db:reset": "prisma migrate reset"
+    "db:reset": "node scripts/db-utils.js reset",
+    "db:push": "node scripts/db-utils.js push", 
+    "db:types": "node scripts/db-utils.js types",
+    "db:types:remote": "node scripts/db-utils.js types:remote",
+    "db:studio": "node scripts/db-utils.js studio",
+    "db:help": "node scripts/db-utils.js help"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.10.0",
