docs: update documentation to reflect PENDING→QUEUED status flow implementation
- Update TASKS.md with current implementation status and completed PENDING→QUEUED flow
- Update ROADMAP.md to show correct status transitions including PENDING status
- Update README.md to reflect Supabase database usage instead of Prisma
- Add current implementation details and next steps required
- Update status flow references throughout documentation
- Mark Phase 1.3 (Video Status Schema) as completed in TASKS.md
- Update webhook trigger descriptions to fire on QUEUED status
- Add implementation status section showing what's working vs planned

--- a/package.json
+++ b/package.json
@@ -15,17 +15,10 @@
     "test:ui": "vitest --ui",
     "test:run": "vitest run",
     "test:watch": "vitest --watch",
-    "test:coverage": "vitest run --coverage",
-    "db:reset": "node scripts/db-utils.js reset",
-    "db:push": "node scripts/db-utils.js push", 
-    "db:types": "node scripts/db-utils.js types",
-    "db:types:remote": "node scripts/db-utils.js types:remote",
-    "db:studio": "node scripts/db-utils.js studio",
-    "db:help": "node scripts/db-utils.js help"
+    "test:coverage": "vitest run --coverage"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.10.0",
-    "@prisma/client": "^6.18.0",
     "@radix-ui/react-accordion": "^1.2.11",
     "@radix-ui/react-alert-dialog": "^1.1.14",
     "@radix-ui/react-aspect-ratio": "^1.1.7",
@@ -65,7 +58,6 @@
     "input-otp": "^1.4.2",
     "lucide-react": "^0.462.0",
     "next-themes": "^0.3.0",
-    "prisma": "^6.18.0",
     "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
