--- a/supabase/config.toml
+++ b/supabase/config.toml
@@ -358,3 +358,14 @@ entrypoint = "./functions/fetch-video-metadata/index.ts"
 # Specifies static files to be bundled with the function. Supports glob patterns.
 # For example, if you want to serve static HTML pages in your function:
 # static_files = [ "./functions/fetch-video-metadata/*.html" ]
+
+[functions.process-transcript-webhook]
+enabled = true
+verify_jwt = true
+import_map = "./functions/process-transcript-webhook/deno.json"
+# Uncomment to specify a custom file path to the entrypoint.
+# Supported file extensions are: .ts, .js, .mjs, .jsx, .tsx
+entrypoint = "./functions/process-transcript-webhook/index.ts"
+# Specifies static files to be bundled with the function. Supports glob patterns.
+# For example, if you want to serve static HTML pages in your function:
+# static_files = [ "./functions/process-transcript-webhook/*.html" ]
