--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "inngest-cli": "^1.12.1",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.462.0",
+    "next": "^16.0.0",
     "next-themes": "^0.3.0",
     "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
@@ -83,7 +84,6 @@
     "@types/react": "^18.3.23",
     "@types/react-dom": "^18.3.7",
     "@vercel/node": "^5.4.1",
-    "@vitejs/plugin-react-swc": "^3.11.0",
     "@vitest/ui": "^3.2.4",
     "autoprefixer": "^10.4.21",
     "concurrently": "^9.2.1",
@@ -94,14 +94,12 @@
     "globals": "^15.15.0",
     "happy-dom": "^20.0.8",
     "jsdom": "^27.0.1",
-    "lovable-tagger": "^1.1.11",
     "postcss": "^8.5.6",
     "prettier": "^3.6.2",
     "tailwindcss": "^3.4.17",
     "tsx": "^4.20.6",
     "typescript": "^5.8.3",
     "typescript-eslint": "^8.38.0",
-    "vite": "^5.4.19",
     "vitest": "^3.2.4"
   }
 }
