chore: update environment variables for Next.js
- Change NEXT_ prefix to NEXT_PUBLIC_ for client-side variables
- NEXT_PUBLIC_SUPABASE_URL (accessible in browser)
- NEXT_PUBLIC_SUPABASE_ANON_KEY (accessible in browser)
- Keep server-side variables without prefix (DATABASE_URL, YOUTUBE_API_KEY, etc.)

Phase 1.3 of Next.js migration

--- a/.env.example
+++ b/.env.example
@@ -1,16 +1,6 @@
-# Supabase Configuration
-# Get these values from https://supabase.com/dashboard/project/_/settings/api
-VITE_SUPABASE_URL=https://your-project-id.supabase.co
-VITE_SUPABASE_ANON_KEY=your-anon-key-here
+NEXT_PUBLIC_SUPABASE_URL=
+NEXT_PUBLIC_SUPABASE_ANON_KEY=
 DATABASE_URL=
-YOUTUBE_API_KEY=your_youtube_api_key_here
-
-# Inngest Background Jobs (Step 2+)
-# Get these from https://app.inngest.com/env/production/manage/keys
-INNGEST_EVENT_KEY=your_inngest_event_key_here
-INNGEST_SIGNING_KEY=your_inngest_signing_key_here
-
-# Instructions:
-# 1. Copy this file to .env.local
-# 2. Replace the placeholder values with your actual Supabase credentials
-# 3. Never commit .env.local to version control
+YOUTUBE_API_KEY=
+INNGEST_EVENT_KEY=
+INNGEST_SIGNING_KEY=
