--- a/package.json
+++ b/package.json
@@ -4,13 +4,13 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
-    "dev:inngest": "concurrently \"vite\" \"npx inngest-cli@latest dev\"",
-    "build": "vite build",
-    "build:dev": "vite build --mode development",
-    "lint": "eslint .",
+    "dev": "next dev -p 8080",
+    "dev:inngest": "concurrently \"next dev -p 8080\" \"npx inngest-cli@latest dev\"",
+    "build": "next build",
+    "start": "next start -p 8080",
+    "lint": "next lint",
     "format": "prettier --write .",
-    "preview": "vite preview",
+    "type-check": "tsc --noEmit",
     "test": "vitest",
     "test:ui": "vitest --ui",
     "test:run": "vitest run",
