--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
-NEXT_PUBLIC_SUPABASE_URL=
-NEXT_PUBLIC_SUPABASE_ANON_KEY=
+NEXT_SUPABASE_URL=
+NEXT_SUPABASE_ANON_KEY=
 DATABASE_URL=
 YOUTUBE_API_KEY=
 INNGEST_EVENT_KEY=
