--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^0.9.9",
     "youtube-transcript-plus": "^1.1.1",
+    "zeroentropy": "0.1.0-alpha.6",
     "zod": "^3.25.76"
   },
   "devDependencies": {
