--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "dependencies": {
     "@ai-sdk/anthropic": "^2.0.37",
+    "@ai-sdk/react": "^2.0.79",
     "@hookform/resolvers": "^3.10.0",
     "@radix-ui/react-accordion": "^1.2.11",
     "@radix-ui/react-alert-dialog": "^1.1.14",
@@ -46,6 +47,7 @@
     "@radix-ui/react-toggle": "^1.1.9",
     "@radix-ui/react-toggle-group": "^1.1.10",
     "@radix-ui/react-tooltip": "^1.2.7",
+    "@supabase/ssr": "^0.7.0",
     "@supabase/supabase-js": "^2.76.1",
     "@tanstack/react-query": "^5.83.0",
     "ai": "^5.0.78",
@@ -56,7 +58,6 @@
     "embla-carousel-react": "^8.6.0",
     "googleapis": "^164.1.0",
     "inngest": "^3.44.3",
-    "inngest-cli": "^1.12.1",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.462.0",
     "next": "^16.0.0",
@@ -95,6 +96,7 @@
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
     "globals": "^15.15.0",
+    "inngest-cli": "^1.12.1",
     "jest": "^30.2.0",
     "jest-environment-jsdom": "^30.2.0",
     "jsdom": "^27.0.1",
