fix(chat): prevent race condition in useChat initialization
Add loading check to ensure activeConversationId is available before rendering AuthenticatedChatArea component. This prevents the useChat hook from initializing before the conversation context is ready.

Changes:
- Add conversation loading state check in ChatArea component
- Show loading UI while conversations are being loaded or created
- Prevent useChat initialization before activeConversationId is set
- Fix potential race condition where useChat could initialize with null conversationId

This ensures proper initialization order and prevents the useChat hook from being created before activeConversationId is available, avoiding potential errors in message persistence.

--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "inngest": "^3.44.3",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.462.0",
+    "nanoid": "^5.1.6",
     "next": "^16.0.0",
     "next-themes": "^0.3.0",
     "react": "^18.3.1",
