feat: integrate Langfuse observability for AI tracing and monitoring
Add comprehensive observability integration using Langfuse for tracing AI calls,
monitoring performance, and debugging production issues across the application.

Features:
- Langfuse client singleton with graceful degradation
- Chat endpoint tracing with userId, conversationId, scope, and tool calls
- Title generation tracing with model usage and token consumption
- Background job tracing for video processing with step-level metadata
- Manual tracing implementation (native Langfuse API)
- Unit tests for client and AI SDK helpers
- Complete error handling with try-catch blocks
- Async, non-blocking tracing operations

Observability coverage:
- Chat API: Full conversation traces with tool call spans
- Generate Title API: Model usage and token tracking
- Video Processing Job: Transcript extraction and indexing metadata
- Graceful degradation: App works perfectly without credentials

Files added:
- src/lib/langfuse/client.ts
- src/lib/langfuse/ai-sdk.ts
- tests/unit/lib/langfuse/client.test.ts
- tests/unit/lib/langfuse/ai-sdk.test.ts

Files modified:
- src/app/api/chat/route.ts
- src/app/api/generate-title/route.ts
- src/lib/inngest/functions/process-video.ts
- README.md (Langfuse setup documentation)
- TASKS.md (implementation tracking)
- .env.example (added Langfuse variables)

Breaking changes: None
Backward compatible: Yes (optional feature)

--- a/.env.example
+++ b/.env.example
@@ -6,3 +6,6 @@ INNGEST_EVENT_KEY=
 INNGEST_SIGNING_KEY=
 ZEROENTROPY_API_KEY=
 ANTHROPIC_API_KEY=
+LANGFUSE_SECRET_KEY=
+LANGFUSE_PUBLIC_KEY=
+LANGFUSE_HOST=
