feat(auth): add OAuth authentication with Google and GitHub providers
- Add OAuth sign-in support for Google and GitHub in AuthContext
- Create reusable OAuthButtons component with loading states and error handling
- Add useCurrentUserImage hook to extract avatar URLs from OAuth metadata
- Add useCurrentUserName hook with intelligent fallback chain for display names
- Create CurrentUserAvatar component with automatic avatar/initials fallback
- Update login page to show OAuth buttons before magic link form
- Update conversation sidebar to use new avatar and name hooks
- Configure Supabase auth with Google and GitHub providers
- Add OAuth redirect URLs to Supabase config for local development

OAuth Flow:
- Users can now sign in with Google or GitHub providers
- OAuth profile images and names are automatically extracted and displayed
- Magic link authentication remains available as fallback
- Avatar displays OAuth profile picture or generates initials from name/email

Related files:
- src/contexts/AuthContext.tsx: Add signInWithGoogle and signInWithGitHub methods
- src/components/auth/oauth-buttons.tsx: New component for OAuth UI
- src/components/auth/current-user-avatar.tsx: New avatar component with fallback
- src/hooks/use-current-user-image.ts: Extract avatar URL from metadata
- src/hooks/use-current-user-name.ts: Extract display name with fallback chain
- src/app/login/page.tsx: Add OAuth buttons to login UI
- src/components/conversations/conversation-sidebar-profile.tsx: Use new avatar/name hooks
- supabase/config.toml: Configure OAuth providers and redirect URLs

--- a/.env.example
+++ b/.env.example
@@ -10,3 +10,11 @@ LANGFUSE_SECRET_KEY=
 LANGFUSE_PUBLIC_KEY=
 LANGFUSE_HOST=
 SUPADATA_API_KEY=
+
+# OAuth Provider Credentials (for social login)
+# Get Google OAuth credentials from: https://console.cloud.google.com/apis/credentials
+GOOGLE_CLIENT_ID=
+GOOGLE_CLIENT_SECRET=
+# Get GitHub OAuth credentials from: https://github.com/settings/developers
+GITHUB_CLIENT_ID=
+GITHUB_CLIENT_SECRET=
